# modex

./: .gitignore  CodexAccountManager.py  README.md  app.sh  build.sh  config.example.toml  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
docs/superpowers/plans/: 2026-05-18-daily-team-wake.md  2026-05-21-api-key-login.md
docs/superpowers/specs/: 2026-05-18-daily-team-wake-design.md  2026-05-21-api-key-login-design.md
scripts/: build_app.py
src/: App.test.tsx  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  macos_notification.m  main.rs  notifications.rs  tray.rs
src-tauri/src/core/: app_config.rs  auth.rs  codex.rs  engine.rs  identity_home.rs  mod.rs  quota.rs  sync.rs  wake.rs
src-tauri/tests/: core_codex.rs  core_config.rs  core_engine.rs  core_identity.rs  core_quota_sync.rs  core_sync.rs  core_wake.rs
src/codex_multi_account/: __init__.py  app_config.py  app_server.py  cli.py  codex_binary.py  config.py  gui_model.py  identity_home.py  launch_agent.py  minitoml.py  notify.py  quota.py  sync.py
src/lib/: api.ts
tests/: test_app_config.py  test_app_packaging.py  test_app_server.py  test_cli_args.py  test_codex_binary.py  test_config.py  test_gui_model.py  test_identity_home.py  test_launch_agent.py  test_quota_state.py  test_sync.py  test_ui_contract.py
