[package]
name = "modex"
version = "0.1.0"
description = "Cross-platform tray account switcher for Codex."
authors = ["Modex"]
edition = "2021"

[lib]
name = "modex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "modex"
path = "src/main.rs"

[build-dependencies]
cc = "1.2.62"
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
base64 = "0.22.1"
dirs = "6.0.0"
rand = "0.9.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.3", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2.3.2"
tauri-plugin-opener = "2.5.0"
tempfile = "3.23.0"
thiserror = "2.0.17"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSStatusItem"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString", "NSUserDefaults"] }

[dev-dependencies]
assert_fs = "1.1.3"
predicates = "3.1.3"
